--- a/config
+++ b/config
@@ -3,6 +3,7 @@
 ####################################################
 SCRIPTS_DIR=$HOME/scripts
 TAGA_DIR=$SCRIPTS_DIR/taga
+TAGA_DIR=~/scripts/taga
 touch $TAGA_DIR/hostList.sh
 touch $TAGA_DIR/hostList.txt
 hostList=`$TAGA_DIR/hostList.sh`
@@ -269,4 +270,4 @@ TEST_DESCRIPTION="taga_anycast"
 # Master Machine
 # run time insert from runLoop.sh
 ##############################################
-MASTER=192.168.43.124
+MASTER=192.168.43.208
