--- a/config
+++ b/config
@@ -45,11 +45,19 @@ FIXED_ONE_LIST=192.168.43.208   # wireshark, other
 FIXED_ONE_LIST=192.168.43.157   # wireshark, other
 FIXED_ONE_LIST=192.168.43.69   # wireshark, other
 
-FIXED_ONE_LIST_ITFC=wlp3s0    # 43.124 , wireshark, oher
-FIXED_ONE_LIST_ITFC=wlan0     # 43.188, wireshark, oher
-FIXED_ONE_LIST_ITFC=wlp2s0    # 43.208, wireshark, oher
-FIXED_ONE_LIST_ITFC=wlo1      # 43.157, wireshark, oher
-FIXED_ONE_LIST_ITFC=wlo1      # 43.69, wireshark, oher
+FIXED_ONE_LIST=10.0.0.18
+FIXED_ONE_LIST=10.0.0.20
+FIXED_ONE_LIST=10.0.0.21
+FIXED_ONE_LIST=10.0.0.22
+FIXED_ONE_LIST=10.0.0.27
+
+FIXED_ONE_LIST_ITFC=wlp3s0    # 43.124 , 10.27 wireshark, oher
+FIXED_ONE_LIST_ITFC=wlan0     # 43.188, 10.18 wireshark, oher
+FIXED_ONE_LIST_ITFC=wlp2s0    # 43.208, 10.20 wireshark, oher
+FIXED_ONE_LIST_ITFC=wlo1      # 43.157, 10.21 wireshark, oher
+FIXED_ONE_LIST_ITFC=wlo1      # 43.69, 10.22 wireshark, oher
+
+FIXED_ALT_LIST="192.168.43.69 192.168.43.124 192.168.43.157 192.168.43.188 192.168.43.208"
 
 ##############################
 # Variable Other List Configuration
@@ -338,4 +346,4 @@ TEST_DESCRIPTION="taga_anycast"
 # Master Machine
 # run time insert from runLoop.sh
 ##############################################
-MASTER=192.168.43.124
+MASTER=localhost
