--- a/config
+++ b/config
@@ -76,6 +76,7 @@ COMMAND=YourPrimaryCommandNameGoesHere
 PROTO_UNDER_TEST=YourProtocolUnderTestGoesHere
 
 
+
 DAEMON1_IP=192.168.43.69
 DAEMON2_IP=192.168.43.124
 
@@ -251,9 +252,9 @@ let DURATION1=$MSGCOUNT/$MSGRATE
 #echo $DURATION1
 DURATION2=20
 DURATION2=20
-DURATION2=10
 DURATION2=40
 DURATION2=60
+DURATION2=10
 
 # try to disable traffic (MSGCOUNT == 0 does not work!)
 #MSGRATE=0.0 
@@ -349,6 +350,14 @@ NET_POLICY_NM_RATE=10 # 10 percent thruput rate allowed for nm traffic
 ##############################################
 STATUS_FILE="/tmp/taga_status.txt"
 TEST_DESCRIPTION="taga_anycast"
+
+##############################################
+# override configs in the confiig_overrides file
+##############################################
+if [ -s $TAGA_DIR/config_overrides ] ; then
+  echo NOTICE: config is being overriden by config_overrides file
+  source $TAGA_DIR/config_overrides
+fi
 
 ##############################################
 # Master Machine
