--- a/config
+++ b/config
@@ -76,6 +76,10 @@ COMMAND=YourPrimaryCommandNameGoesHere
 PROTO_UNDER_TEST=YourProtocolUnderTestGoesHere
 
 
+TAGA_DISPLAY="VERBOSE"
+TAGA_DISPLAY="BRIEF"
+TAGA_DISPLAY="SILENT"
+
 
 DAEMON1_IP=192.168.43.69
 DAEMON2_IP=192.168.43.124
@@ -257,8 +261,10 @@ DURATION2=60
 DURATION2=10
 
 # end of iteration delay 
-#END_OF_ITER_DELAY=60 #0
-#END_OF_ITER_DELAY_PRINT_MODULUS=10 #0
+END_OF_ITER_DELAY=60 #0
+END_OF_ITER_DELAY_PRINT_MODULUS=10 #0
+END_OF_ITER_DELAY=1 #0
+END_OF_ITER_DELAY_PRINT_MODULUS=1 #0
 
 # try to disable traffic (MSGCOUNT == 0 does not work!)
 #MSGRATE=0.0 
